--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 0.9rem !important;
   min-height: 100vh;
-  max-height: max-content;
+  height: max-content;
 }
 
 .btn:hover {
@@ -58,6 +58,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   padding-top: 10vh;
   padding-bottom: 8vh;
 }
@@ -276,7 +277,7 @@ button.button__submit {
 
 .add-recipe__form {
   display: block;
-  margin: 5vh auto 0 !important;
+  margin: 4vh auto 5vh !important;
   width: 90% !important;
 }
 
@@ -380,7 +381,7 @@ button.button__submit {
 .reviews-container {
   background-color: white;
   border-radius: 4px;
-  margin-bottom: 6vh;
+  margin-bottom: 15vh;
   width: 100%;
 }
 
@@ -458,7 +459,7 @@ button.button__submit {
 .profile__title {
   color: white;
   display: block;
-  margin: 0 auto 5vh;
+  margin: 0 auto 2vh;
   text-align: left;
   width: 90% !important;
 }
@@ -495,7 +496,7 @@ button.button__submit {
   color: white;
   display: block;
   margin: 0 auto;
-  padding-top: 4vh;
+  padding-top: 2vh;
   text-align: left;
   width: 90% !important;
 }
@@ -521,7 +522,7 @@ button.button__submit {
   color: white;
   display: block;
   margin: 0 auto;
-  padding-top: 4vh;
+  padding-top: 1vh;
   text-align: center;
   width: 90% !important;
 }
@@ -559,4 +560,13 @@ button.button__submit {
 
 .pet-actions {
   margin-top: 2vh;
+}
+
+/* SERVICES */
+
+.pet-services__tip-to-add {
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 0.8rem;
+  margin: 0 auto;
+  width: 90%;
 }
