--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,11 @@
   background-color: rgba(255, 255, 255, 1);
   border-radius: 3px;
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 35%);
-  height: 30vh !important;
+  height: 35vh !important;
   margin-bottom: 5vh;
   margin-top: 5vh;
   padding: 10px;
-  width: 80%;
+  width: 90%;
 }
 
 .homepage__icon-container {
@@ -569,4 +569,10 @@ button.button__submit {
   font-size: 0.8rem;
   margin: 0 auto;
   width: 90%;
+}
+
+.table {
+  border-radius: 8px;
+  margin-top: 2vh;
+  width: 90% !important;
 }
