--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
   align-items: center;
   background-color: #f76333;
   display: flex;
+  height: max-content;
   justify-content: space-between !important;
   position: fixed;
   width: 100vw;
@@ -9,7 +10,7 @@
 }
 
 .navbar__logo {
-  width: 8vw;
+  width: 30px;
 }
 
 .navbar__link-logo {
@@ -35,10 +36,26 @@
 .navbar__profile-pic {
   border-radius: 50%;
   margin-right: 6vw;
-  width: 7vw;
+  width: 30px;
 }
 
 .navbar__link {
   color: black;
   text-decoration: none;
+}
+
+
+@media (min-width: 768px) {
+  .navbar__container {
+    height: 60px;
+  }
+  .navbar__logo {
+    width: 40px;
+  }
+  .navbar__profile-pic {
+    width: 40px;
+  }
+  .authLink {
+    font-size: 1.2rem;
+  }
 }
