--- a/src/components/RecipeCard/RecipeCard.css
+++ b/src/components/RecipeCard/RecipeCard.css
@@ -20,6 +20,11 @@
   text-decoration: none;
 }
 
+.card-links:hover {
+  color: black;
+  text-decoration: none;
+}
+
 @media (min-width: 576px) {
 }
 
